--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <title>Welcome!</title>
-  </head>
-  <body style="font-family: sans-serif; text-align: center; margin-top: 100px;">
-    <h1>Hello, welcome to my website!</h1>
-    <p>More updates coming soon...</p>
-  </body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Beat Saber Landing Page</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <div class="logo">Beat Saber</div>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero">
+            <h1>Feel The Rhythm, Slash The Beats</h1>
+            <p>Immerse yourself in the most addictive VR rhythm game.</p>
+            <button class="btn">Play Now</button>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Beat Saber Landing Page</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
 </html>
