--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Features</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -24,6 +24,18 @@
             <h1>Feel The Rhythm, Slash The Beats</h1>
             <p>Immerse yourself in the most addictive VR rhythm game.</p>
             <button class="btn">Play Now</button>
+        </section>
+
+        <section id="contact" class="contact-section">
+            <h2>Connect with Mystrik</h2>
+            <div class="social-links">
+                <a href="#" target="_blank" class="social-btn twitter">Twitter</a>
+                <a href="#" target="_blank" class="social-btn youtube">YouTube</a>
+                <a href="#" target="_blank" class="social-btn twitch">Twitch</a>
+                <a href="#" target="_blank" class="social-btn bluesky">Bluesky</a>
+                <a href="#" target="_blank" class="social-btn discord">Discord</a>
+                <a href="#" target="_blank" class="social-btn spotify">Spotify</a>
+            </div>
         </section>
     </main>
 
