--- a/index.html
+++ b/index.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beat Saber Landing Page</title>
+    <title>Mystrik's Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">Beat Saber</div>
+            <div class="logo">Mystrik</div>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#">‎ </a></li>
+                <li><a href="#">‎ </a></li>
+                <li><a href="#">‎ </a></li>
+                <li><a href="#contact">‎ </a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="hero">
-            <h1>Feel The Rhythm, Slash The Beats</h1>
-            <p>Immerse yourself in the most addictive VR rhythm game.</p>
-            <button class="btn">Play Now</button>
+            <h1>Scroll down to see my socials!</h1>
+            <p>gaming</p>
+            <button class="btn">ominous button</button>
         </section>
 
         <section id="contact" class="contact-section">
-            <h2>Connect with Mystrik</h2>
+            <h2>My Socials</h2>
             <div class="social-links">
                 <a href="#" target="_blank" class="social-btn twitter">Twitter</a>
                 <a href="#" target="_blank" class="social-btn youtube">YouTube</a>
@@ -40,7 +40,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Beat Saber Landing Page</p>
+        <p>&copy; 08-2025 Mystrik Landing Page</p>
     </footer>
 
     <script src="script.js"></script>
