--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
         <section id="contact" class="contact-section">
             <h2>My Socials</h2>
             <div class="social-links">
-                <a href="#" target="_blank" class="social-btn twitter">Twitter</a>
-                <a href="#" target="_blank" class="social-btn youtube">YouTube</a>
-                <a href="#" target="_blank" class="social-btn twitch">Twitch</a>
-                <a href="#" target="_blank" class="social-btn bluesky">Bluesky</a>
-                <a href="#" target="_blank" class="social-btn discord">Discord</a>
-                <a href="#" target="_blank" class="social-btn spotify">Spotify</a>
+                <a href="#" target="https://x.com/MystrikVR" class="social-btn twitter">Twitter</a>
+                <a href="#" target="https://www.youtube.com/@Mystrik/videos" class="social-btn youtube">YouTube</a>
+                <a href="#" target="https://www.twitch.tv/mystrik_" class="social-btn twitch">Twitch</a>
+                <a href="#" target="https://bsky.app/profile/fluffygaything.bsky.social" class="social-btn bluesky">Bluesky</a>
+                <a href="#" target="https://discord.gg/UNv68525eQ" class="social-btn discord">Discord</a>
+                <a href="#" target="https://open.spotify.com/user/uf6i7rcawkijy07sa9q9x5aoa" class="social-btn spotify">Spotify</a>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 08-2025 Mystrik Landing Page</p>
+        <p>&copy; 2025 Mystrik Landing Page</p>
     </footer>
 
     <script src="script.js"></script>
