--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="https://x.com/MystrikVR" target="_blank" class="social-btn twitter">Twitter</a>
                 <a href="https://www.youtube.com/@Mystrik/videos" target="_blank" class="social-btn youtube">YouTube</a>
                 <a href="https://www.twitch.tv/mystrik_" target="_blank" class="social-btn twitch">Twitch</a>
-                <a href="https://bsky.app/profile/fluffygaything.bsky.social" target="_blank" class="social-btn bluesky">Bluesky</a>
+                <a href="https://bsky.app/profile/mystrik.org" target="_blank" class="social-btn bluesky">Bluesky</a>
                 <a href="https://discord.gg/UNv68525eQ" target="_blank" class="social-btn discord">Discord</a>
                 <a href="https://open.spotify.com/user/uf6i7rcawkijy07sa9q9x5aoa" target="_blank" class="social-btn spotify">Spotify</a>
             </div>
